[metadata]
name = xsd2tkform
version = 0.1.0
author = Alexandre Schulz
author_email = alexandre.schulz@irap.omp.eu
description = Generate Tkinter forms from XSD files
long_description = API for generating Tkinter forms from XSD files
long_description_content_type = file: README.md
url = https://github.com/Dolgalad/xsd2tkform
project_urls = 
    Bug Tracker = https://github.com/Dolgalad/xsd2tkform/issues
classifiers = 
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

